# celupro

./: .gitignore  .replit  DEPLOY_RENDER.md  ENTREGA_FINAL.txt  FAQ.md  FUNCIONES_VACIAS.md  GUIA_RAPIDA.txt  IMPLEMENTACION_COMPLETADA.md  IMPRESORAS.md  INDICE.md  INICIAR.bat  INSTALACION.md  INSTRUCCIONES_IMPRESORA_LOCAL.md  INVESTIGACION_INGRESO_ID.md  MANUAL_EJECUCION.md  README.md  RESUMEN_EJECUTIVO.md  START_APP.bat  check_config.py  create_user.py  debug_config.py  diagnose.py  diagnose_app.py  fix_celupro.py  iniciar.py  list_users.py  main.py  pyproject.toml  render.yaml  replit.md  reset_config.py  reset_db.py  run.py  run_app.py  start.py  start_all.py  start_backend.py  start_servers.bat  test_login.py  test_simple.py  (+1 more)
.githooks/: pre-push
backend/: .env.bak.20260304_134028  .env.example  app.py  requirements.txt
backend/models/: cliente.py  config.py  database.py  falla.py  ingreso.py  marca.py  nota.py  repuesto.py  user.py
backend/routes/: __init__.py
backend/tests/: test_smoke_api.py
backend/utils/: thermal_printer.py
backups/: celupro_20260225_194426.sql
database/: SCHEMA.sql  init_db.py
frontend/: server.py
frontend/templates/: dashboard.html  login.html
scripts/maintenance/: generate_jwt_secret.py  install_print_agent_launchd.sh  install_print_agent_windows.bat  install_print_agent_windows.ps1  post_deploy_check.sh  print_agent.py  quality_check.sh  uninstall_print_agent_launchd.sh  uninstall_print_agent_windows.bat  uninstall_print_agent_windows.ps1
scripts/manual_tests/: test_config_get.py  test_full_flow.py
(+3 files in other folders)
