[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "flask-jwt-extended>=4.7.1",
    "pillow>=12.0.0",
    "python-dotenv>=1.2.1",
    "python-escpos>=3.1",
    "qrcode>=8.2",
    "requests>=2.32.5",
    "werkzeug>=3.1.3",
]
